--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue2-questionnaire",
+  "name": "vue2-element",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "liuqinqin <liuqinqin@meizu.com>",
+  "description": "vue2 element",
+  "author": "rubyliuqq",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -26,7 +26,8 @@
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
